--- a/src/Components/shadowCss.css
+++ b/src/Components/shadowCss.css
@@ -58,3 +58,52 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.location {
+  background: -webkit-linear-gradient(#2699fb, #f3274f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text-container {
+  /* height: 60px;
+  overflow: hidden;
+  white-space: nowrap;
+  width: fit-content;
+  border-bottom: 10px solid #fff; */
+
+  overflow: hidden;
+  height: 55px;
+  white-space: nowrap;
+  border-bottom: 5px solid #fff;
+  background: linear-gradient(90deg, #2699fb, #f3274f);
+  background-clip: text;
+  color: transparent;
+  display: inline-block;
+}
+
+.bottomBorder {
+  /* border-right: 10px solid white;
+  border-bottom: 2px solid transparent;
+  background: linear-gradient(90deg, #2699fb, #f3274f);
+  background-clip: text; */
+
+  overflow: hidden;
+  white-space: nowrap;
+  width: fit-content;
+  padding-right: 10px;
+  border-right: 5px solid #fff;
+  background: linear-gradient(90deg, #2699fb, #f3274f);
+  background-clip: text;
+  color: transparent;
+  display: inline-block;
+}
+
+.bottomBorder::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: linear-gradient(90deg, #2699fb, #f3274f);
+  transition: width 0.5s ease;
+}
